--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -79,6 +79,10 @@ button:focus-visible {
   }
 }
 
+.create-match {
+  margin-bottom: 2rem;
+}
+
 .matches {
   display: flex;
   flex-direction: column;
